--- a/index.html
+++ b/index.html
@@ -320,6 +320,18 @@
         <main
             class="flex-grow max-w-7xl mx-auto px-6 pb-20 w-full relative z-10"
         >
+            <!-- Static Content for SEO -->
+            <div class="sr-only">
+                <h2>Muhammad Fiaz's Open Source Projects</h2>
+                <p>Muhammad Fiaz is a full-stack developer specializing in full-stack web development, mobile apps with Flutter, and various software tools. This portfolio showcases open-source projects available on GitHub, including JavaScript, Python, React, and more technologies.</p>
+                <ul>
+                    <li>Full-stack web applications</li>
+                    <li>Flutter mobile apps</li>
+                    <li>Software tools and utilities</li>
+                    <li>Open source contributions</li>
+                </ul>
+            </div>
+
             <!-- Controls & Search -->
             <div
                 class="flex flex-col md:flex-row justify-between items-center gap-4 mb-8 bg-white/50 dark:bg-neutral-900/50 p-4 rounded-2xl border border-slate-200 dark:border-neutral-800 backdrop-blur-sm shadow-sm"
